edited Ui to prevent text overflow

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -313,6 +313,11 @@
     -fx-border-width: 0;
 }
 
+#cardPaneDetail {
+    -fx-background-color: transparent;
+    -fx-border-width: 0;
+}
+
 #assignmentCardPane {
     -fx-background-color: transparent;
     -fx-border-width: 0;
